--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -70,6 +70,7 @@ html{
     border-radius: 0.5rem;
     box-shadow: 0px 3px 9px 1px rgba(0,0,0,0.26);
     background-color: white;
+    color: black;
 }.header-button:visited{
     color: black;
 }
