section 3 image positioned.

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -211,3 +211,10 @@ section[class^="benefits--section"] > p{
     color: var(--grey);
     margin-top: 1rem;
 }
+
+/* Section 3 */
+
+.plans--bitcoinbaby{
+    width: 100%;
+    max-width: 45.0rem;
+}
