--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -254,17 +254,30 @@ section[class^="benefits--section"] > p{
     margin: 0 2rem;
 }
 
+.plans--cards--slider{
+    display: flex;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+    padding: 0 25%;
+}
+
+.plans--first-card{margin-left: 10px;}
+
+.plans--last-card{margin-right: 50%;}
+
 .plans--card{
     background-color: var(--just-white);
     width: 19.0rem;
     height: 24.7rem;
     padding: 2.4rem 2.0rem;
-    margin: 4rem auto;
+    margin: 4rem 1rem;
     text-align: center;
     color: var(--warm-black);
     border-radius: 0.8rem;
     box-shadow: 0px 4px 8px 0px #59491E29;
     position: relative;
+    scroll-snap-align: center;
 }
 
 .plans--card--label{
@@ -280,7 +293,7 @@ section[class^="benefits--section"] > p{
     font-weight: 700;
     position: absolute;
     top: -1.6rem;
-    left: calc(25%); 
+    left: calc(50% - 5.0rem); 
 }
 
 .plans--card--yearly-pay{
